TaskTest added and TaskServiceTest fixed